--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 
-We've found thousands of vulnerabilities in mobile apps that can leak sensitive data and manipulate back-end data over several months of research.
+<p>We've found thousands of vulnerabilities in mobile apps that can leak sensitive data and manipulate back-end data over several months of research.</p>
 
-More than 2,000 vulnerable apps have been identified, and we have sent detailed reports of vulnerabilities to each developer of the app and are waiting for a response.
+<p>More than 2,000 vulnerable apps have been identified, and we have sent detailed reports of vulnerabilities to each developer of the app and are waiting for a response.</p>
 
-We expect all vulnerabilities to be fixed, and we will release a list of all vulnerable apps within 30 days
+<p>We expect all vulnerabilities to be fixed, and we will release a list of all vulnerable apps within 30 days</p>
 
-Also, our research is now submitted to Defcon Talks anㅇ waiting for response. 
+<p>Also, our research is now submitted to Defcon Talks anㅇ waiting for response.</p> 
 
-If our study is adopted, you will find the detailed technical details at the Defcon Conference.
+<p>If our study is adopted, you will find the detailed technical details at the Defcon Conference.</p>
 
 
 <!--<div id="gh-latest"></div>-->
